# ChangeLog for x11-libs/libXfont
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfont/ChangeLog,v 1.102 2009/04/16 02:17:45 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> libXfont-1.3.4.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> libXfont-1.3.4.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> libXfont-1.3.4.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> libXfont-1.3.4.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> libXfont-1.3.4.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libXfont-1.3.4.ebuild:
  Marking libXfont-1.3.4 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libXfont-1.3.4.ebuild:
  Marking libXfont-1.3.4 ppc stable for bug 251832

*libXfont-1.3.4 (13 Jan 2009)

  13 Jan 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  +libXfont-1.3.4.ebuild:
  Bump. Adds support for bzip2 bitmap-font compression. Other bugfixes.

*libXfont-1.3.3 (05 Jul 2008)

  05 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +libXfont-1.3.3.ebuild:
  Bump for X.Org 7.4.

  26 Mar 2008; <ricmm@gentoo.org> libXfont-1.3.0.ebuild:
  Drop to ~mips due to unstable deps

*libXfont-1.3.2 (10 Mar 2008)

  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +libXfont-1.3.2.ebuild:
  Bump.

  20 Jan 2008; Robert Buchholz <rbu@gentoo.org> libXfont-1.3.1-r1.ebuild:
  amd64 stable (bug #204362)

  19 Jan 2008; Jeroen Roovers <jer@gentoo.org> libXfont-1.3.1-r1.ebuild:
  Stable for HPPA (bug #204362).

  18 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  libXfont-1.3.1-r1.ebuild:
  ppc stable, bug #204362

  18 Jan 2008; Raúl Porcel <armin76@gentoo.org> libXfont-1.3.1-r1.ebuild:
  alpha/ia64 stable wrt security #204362

  18 Jan 2008; Ferris McCormick <fmccor@gentoo.org>