@@ -1,15 +1,10 @@
 AUX 0001-Fix-for-CVE-2008-0006-PCF-Font-parser-buffer-overf.patch 1494 RMD160 ea3d7b43d56b560a9403ab09911e5abb406e44ae SHA1 cd3ef26e59ad3bb64fedc44f828b84c271a2806c SHA256 cc8f8461278ae5d6c1e1b26f8e9edf8d39182092620ab3c3a84500e379940deb
 AUX libXfont-1.3.4-winnt.patch 4147 RMD160 fa0293b2a02549edcfb4ad474f06dd9cb79c697a SHA1 bf0f481c879d62827d961d884e73240271b458a1 SHA256 8fa934f7bdc4ed4e4fa055f6a37f14ea0f7ddf664a792ad9a02f3e6ca02f8d15
-DIST libXfont-1.3.0.tar.bz2 582389 RMD160 115b73f66cc8024cf2cffe5e83d6516f187d1f4d SHA1 3440ff0bd9b364991da2f0b5d38c1c87d8a4c032 SHA256 07567b9880f28d1a404389c024a185419bfe81136aef3d9eda52407f34c3d3dd
 DIST libXfont-1.3.1.tar.bz2 564235 RMD160 13c8ed7b33ec0c4f08c032d74958e49d3c177464 SHA1 90153414cd3580d92cad6469166c099749cddd29 SHA256 dcfb7dc980a16ad98ac984b98321148864ea8b4637d3dd3773e483a14158a9b1
-DIST libXfont-1.3.2.tar.bz2 584023 RMD160 e27e4d14357c56044994a4c757891a3b7ca2e695 SHA1 3723147f97dd77d12da4a69c7ce4ebd1040e1a42 SHA256 c167cfd529b7c67f496ee0bed3c0b43e0107de0f689d387c1c0e23ef7cf3d2f2
-DIST libXfont-1.3.3.tar.bz2 591117 RMD160 f8fba81f41043c07ffa0e014ca8758fdcef7df06 SHA1 bfbdd25239ef6cd515bb7afe888f0556454b34c7 SHA256 6171e6bca4bd6333611bd9c63cccc8e8e412d876c72097f0dddc490a9df51d5a
 DIST libXfont-1.3.4.tar.bz2 571087 RMD160 81d2be307219f6550793fb8c1661624e6bbbf55d SHA1 d7782b506f82cfce928c8be35be859c18f1e852f SHA256 b09f23f1fd758fe25336d084455229e6847fab9dcaec839846431f0f4fe7d9f0
-EBUILD libXfont-1.3.0.ebuild 884 RMD160 2058cb1513a650fd054845521408ae59e189ea2b SHA1 b2574d87c42e9e29e61fec888df40f11117af792 SHA256 5fd500a1e51d7eae99422067cdcc0fdcf2961b8f874f7a5e046a6c738c29df82
+DIST libXfont-1.4.0.tar.bz2 410560 RMD160 999e6bbbbfaa2ad238abd9b7f1d93adf95143614 SHA1 f47a2f41273cdbe5198ac700df70686fab72cd35 SHA256 eafff0157f2c7172214449d4b6b0c72328cad7026ecace226189b511791c5f75
 EBUILD libXfont-1.3.1-r1.ebuild 990 RMD160 4e721897736e9b844be85f2e5cf4049f6efcba48 SHA1 274de1e24e8d9c9e8beaa3c3d3f8e9dd13dd5382 SHA256 8f67c392453344ada2da19516b6805d977aeef7df44d4e228b86a04da1365c71
-EBUILD libXfont-1.3.1.ebuild 885 RMD160 1a685e09aac72d46a28fa680cf07dd3bb891f5cc SHA1 09c3309ed8feb51139eb969b1fa5cc5b742075be SHA256 29193f32b74c3683352603832b4d44c8929aa53ad014d944f7ca3ac6431813c0
-EBUILD libXfont-1.3.2.ebuild 1047 RMD160 7dd3b80d3558b731cedb8b73373f24844989db05 SHA1 b20a5c614fc0040fcb4ee52c1d2816b431ffd47e SHA256 ad37b177b533e48fc655d043883465385c48b82cd84420b59192cca52abfbe55
-EBUILD libXfont-1.3.3.ebuild 1060 RMD160 2b3a81e0b631a0f41972075e831739556c6d27e0 SHA1 54ae789c4e947b933c00e31b1976a67ef29db10e SHA256 34c1caa7289522a79f6a380d3405b2d600249d89e643bcde82f0861e11f4e63f
 EBUILD libXfont-1.3.4.ebuild 1428 RMD160 ec75bed359364c57639ea9682c4962dc1101ed21 SHA1 6b351f205d8072bf91097c26b97777b18aea6014 SHA256 71c6e6e48f69bcd31217a97229c69f2b6734873bfbf70b2e7f5a034604f015dc
-MISC ChangeLog 14743 RMD160 5e4b64d2ced0f15bfeeda0e9804c0443fac2d00e SHA1 ce575a249c9d96751db3352c52b557a020faa70d SHA256 59b83bbb3467611bd310549e22b98f979ba9a7fa4562f2f86d40e2743bcc728a
+EBUILD libXfont-1.4.0.ebuild 1446 RMD160 33728a5d64cdfe06239e80357cfafee82dc0c6d8 SHA1 0178139b2166454f05c1d7c049f587fa91e4a73e SHA256 64dff41d91451f1e66333481dd74855a424378cc5fd715db4ab0804c14b6295c
+MISC ChangeLog 15052 RMD160 9907bdedbbde6cebfd140794f1b4e83f0fad9349 SHA1 8d03714b303c1b2d86f7054bf2e900cb7917cb6e SHA256 7308d0edb61e85f9037c37523aa6f9252e2ed62af1ace432812af2e3ca6a7f6c
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
