@@ -1,6 +1,15 @@
 # ChangeLog for x11-libs/libXfont
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfont/ChangeLog,v 1.102 2009/04/16 02:17:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfont/ChangeLog,v 1.104 2009/04/29 11:49:55 remi Exp $
+
+  29 Apr 2009; Rémi Cardona <remi@gentoo.org> -libXfont-1.3.0.ebuild,
+  -libXfont-1.3.1.ebuild, -libXfont-1.3.2.ebuild, -libXfont-1.3.3.ebuild:
+  prune older versions
+
+*libXfont-1.4.0 (29 Apr 2009)
+
+  29 Apr 2009; Rémi Cardona <remi@gentoo.org> +libXfont-1.4.0.ebuild:
+  import 1.4.0 from the x11 overlay
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> libXfont-1.3.4.ebuild:
   Stable for HPPA (bug #251832).
